--- a/code/.env
+++ b/code/.env
@@ -5,6 +5,11 @@ AZURE_OPENAI_ENDPOINT=YOUR-OPENAI-ENDPOINT
 AZURE_OPENAI_API_KEY=YOUR-OPENAI-API-KEY
 AZURE_OPENAI_API_VERSION=YOUR-OPENAI-API-VERSION
 AZURE_OPENAI_EMBEDDING_DEPLOYED_MODEL=YOUR-OPENAI-EMBEDDING-DEPLOYED-MODEL
+AZURE_AI_VISION_API_KEY=YOUR-AZURE_AI_SERVICES-API-KEY
+AZURE_AI_VISION_ENDPOINT=YOUR-COGNITIVE-SERVICES-ENDPOINT
+AZURE_AI_VISION_MODEL_VERSION=YOUR-AZURE_AI_SERVICES-MODEL-VERSION
+BLOB_CONNECTION_STRING=YOUR-BLOB-CONNECTION-STRING
+BLOB_CONTAINER_NAME=YOUR-BLOB-CONTAINER-NAME
 MYSQL_SERVER=YOUR-MYSQL-SERVER-NAME
 MYSQL_USERNAME=YOUR-MYSQL-DB-USERNAME
 MYSQL_DATABASE=YOUR-MYSQL-DATABASE-NAME
